--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -20,3 +20,7 @@ jobs:
         run: |
           curl --location --request POST 'https://edu.definesys.cn/edu-api/forumSign/sign' \
           --header "Token: ${{ secrets.FORUM_TOKEN_LIN }}"
+      - name: Send POST request wang
+        run: |
+          curl --location --request POST 'https://edu.definesys.cn/edu-api/forumSign/sign' \
+          --header "Token: ${{ secrets.FORUM_TOKEN_WANG }}"
