--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -24,46 +24,48 @@ jobs:
       - name: Parse token expiry and calculate remaining time
         id: parse_token_expiry
         run: |
-          import jwt
-          import os
-          import time
-          from datetime import datetime, timezone
+          python -c "
+import jwt
+import os
+import time
+from datetime import datetime, timezone
 
-          def get_remaining_time(expiry):
-              now = datetime.now(timezone.utc)
-              if expiry:
-                  exp_time = datetime.fromtimestamp(expiry, tz=timezone.utc)
-                  remaining_time = exp_time - now
-                  
-                  days = remaining_time.days
-                  seconds = remaining_time.seconds
-                  hours = seconds // 3600
-                  minutes = (seconds % 3600) // 60
+def get_remaining_time(expiry):
+    now = datetime.now(timezone.utc)
+    if expiry:
+        exp_time = datetime.fromtimestamp(expiry, tz=timezone.utc)
+        remaining_time = exp_time - now
+        
+        days = remaining_time.days
+        seconds = remaining_time.seconds
+        hours = seconds // 3600
+        minutes = (seconds % 3600) // 60
 
-                  if days > 0:
-                      return f"{days}天"
-                  elif hours > 0:
-                      return f"{hours}小时"
-                  else:
-                      return "不到一小时"
-              else:
-                  return "未找到过期时间"
+        if days > 0:
+            return f'{days}天'
+        elif hours > 0:
+            return f'{hours}小时'
+        else:
+            return '不到一小时'
+    else:
+        return '未找到过期时间'
 
-          def get_token_expiry(token):
-              try:
-                  decoded = jwt.decode(token, options={"verify_signature": False})
-                  exp = decoded.get('exp')
-                  return get_remaining_time(exp)
-              except Exception as e:
-                  return str(e)
+def get_token_expiry(token):
+    try:
+        decoded = jwt.decode(token, options={'verify_signature': False})
+        exp = decoded.get('exp')
+        return get_remaining_time(exp)
+    except Exception as e:
+        return str(e)
 
-          forum_token_expiry = get_token_expiry(os.getenv('FORUM_TOKEN'))
-          forum_token_lin_expiry = get_token_expiry(os.getenv('FORUM_TOKEN_LIN'))
-          forum_token_wang_expiry = get_token_expiry(os.getenv('FORUM_TOKEN_WANG'))
+forum_token_expiry = get_token_expiry(os.getenv('FORUM_TOKEN'))
+forum_token_lin_expiry = get_token_expiry(os.getenv('FORUM_TOKEN_LIN'))
+forum_token_wang_expiry = get_token_expiry(os.getenv('FORUM_TOKEN_WANG'))
 
-          print(f"::set-output name=forum_token_expiry::{forum_token_expiry}")
-          print(f"::set-output name=forum_token_lin_expiry::{forum_token_lin_expiry}")
-          print(f"::set-output name=forum_token_wang_expiry::{forum_token_wang_expiry}")
+print(f'::set-output name=forum_token_expiry::{forum_token_expiry}')
+print(f'::set-output name=forum_token_lin_expiry::{forum_token_lin_expiry}')
+print(f'::set-output name=forum_token_wang_expiry::{forum_token_wang_expiry}')
+          "
 
       - name: Send POST request for 一斩
         id: request_1
